objects/setup_vcs__c.object
<CustomObject>
    <fields>
        <fullName>Hosted_On__c</fullName>
        <label>Hosted On</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SCMType__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BitBucket</fullName>
                    <default>true</default>
                    <label>BitBucket</label>
                </value>
                <value>
                    <fullName>GitHub</fullName>
                </value>
                <value>
                    <fullName>GitLab</fullName>
                </value>
                <value>
                    <fullName>OnPrem</fullName>
                </value>
                <value>
                    <fullName>AWS Code Commit</fullName>
                </value>
                <value>
                    <fullName>SVN</fullName>
                </value>
                <value>
                    <fullName>TFS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Repo_Username__c</fullName>
        <label>Repo_Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Repository_Name__c</fullName>
        <label>Repository Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCMType__c</fullName>
        <label>SCMType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GIT</fullName>
                </value>
                <value>
                    <fullName>SVN</fullName>
                </value>
                <value>
                    <fullName>TFS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SF_Setup__c</fullName>
        <label>SF_Setup</label>
        <referenceTo>Setup__c</referenceTo>
        <relationshipLabel>setup_vcs</relationshipLabel>
        <relationshipName>setup_vcs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>remoteurl__c</fullName>
        <label>remoteurl</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>setup_vcs</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>VCS-{000000}</displayFormat>
        <label>setup_vcs Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>setup_vcs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>